--- a/LoginRes.html
+++ b/LoginRes.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <script>
-
+<!-- edit file demo -->
         var x = document.getElementById("login");
         var y = document.getElementById("register");
         var z = document.getElementById("btn");
